# Freight

./: .gitignore  CMakeLists.txt
Source/: CMakeLists.txt
Source/Application/: Application.hpp  CMakeLists.txt  Error.hpp
Source/Freight/: CMakeLists.txt  Defines.hpp  Error.hpp  FilePath.hpp  Freight.cpp  Freight.hpp  String.hpp  pch.hpp
Source/Freight/Entry/: CMakeLists.txt  Win32.cpp
Source/Freight/Error/: Error.hpp  Result.hpp
Source/Freight/Events/: CMakeLists.txt  EventManager.hpp
Source/Freight/FileSystem/: CMakeLists.txt  FileLoader.cpp  FileLoader.hpp  Filepath.cpp  Filepath.hpp
Source/Freight/Gfx/: CMakeLists.txt
Source/Freight/Gfx/2D/: Attachment2D.cpp  Attachment2D.hpp  Camera2D.cpp  Camera2D.hpp  Env2D.cpp  Env2D.hpp  Node2D.cpp  Node2D.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
Source/Freight/Gfx/3D/: Env3D.cpp
Source/Freight/Gfx/Resources/: FontManager.cpp  FontManager.hpp  ResourceManager.cpp  ResourceManager.hpp  TextureManager.cpp  TextureManager.hpp
Source/Freight/Gfx/_GL/: GLShader.cpp  GLShader.hpp
Source/Freight/Include/: CMakeLists.txt  Freight.hpp  Math.hpp
Source/Freight/Include/Freight/: FileIO.hpp  Gfx.hpp  Testing.hpp  pch.hpp
Source/Freight/Includes/: CMakeLists.txt
Source/Freight/Includes/Freight/: Freight.hpp  Log.hpp  Math.hpp
Source/Freight/LLGfx/: BufferDescriptor.hpp  CMakeLists.txt  CmdBuffer.hpp  CommandQueue.hpp  Device.hpp  InputLayoutDescriptor.hpp  PipelineDescriptor.hpp  ShaderDescriptor.hpp  ShaderSignatureDescriptor.cpp  ShaderSignatureDescriptor.hpp  Types.hpp  VertexLayoutDescriptor.hpp
Source/Freight/LLGfx/OpenGL/: CMakeLists.txt  OpenGLCommandQueue.cpp  OpenGLCommandQueue.hpp  OpenGLDevice.cpp  OpenGLDevice.hpp  OpenGLErrorChecks.hpp  OpenGLPipeline.hpp  OpenGLShader.hpp  OpenGLShaderCode.hpp  OpenGLShaderParameter.cpp  OpenGLShaderParameter.hpp  OpenGLShaderSignature.hpp
Source/Freight/Log/: CMakeLists.txt  Log.cpp  Log.hpp
Source/Freight/Math/: CMakeLists.txt  Conversion.cpp  Conversion.hpp  Matrix.hpp  Precision.hpp  Quaternion.hpp  Transform.cpp  Transform.hpp  Vector.hpp
Source/Freight/Tasks/: Task.cpp  Task.hpp
Source/Freight/Testing/: Test.hpp  TestResult.hpp  TestStage.hpp  TestUtil.hpp
Source/FreightTests/: CMakeLists.txt  Vector.cpp  main.cpp
Source/MathSandbox/: CMakeLists.txt  GraphicsResourceManager.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  LoadEvents.hpp  Main.cpp  MathSandbox.cpp  MathSandbox.hpp  PhysicsSystem3D.cpp  PlayerControllerSystem.cpp  stb_image.h
Source/Sandbox/: CMakeLists.txt  Entry.cpp  SandboxApp.cpp  SandboxApp.hpp  Vertex.hpp
Source/Sandbox/Entry/OSX/: AppDelegate.m  CMakeLists.txt  Main.storyboard  Renderer.mm  ShaderTypes.h  Shaders.metal  main.m
Source/Sandbox/Entry/glfw/: CMakeLists.txt  main.cpp
Source/SharedModules/Renderer/: @idea.cpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp
Source/SharedModules/Renderer/2D/: CMakeLists.txt  RenderGroup2D.hpp  RenderNode2D.hpp  RenderSprite.hpp
Source/SharedModules/Renderer/3D/: CMakeLists.txt  RenderGroup3D.hpp  RenderModel.hpp  RenderNode3D.hpp
Source/WinSandbox/: CMakeLists.txt  GamePadController.cpp  GamePadController.hpp  GraphicsResourceManager.cpp  GraphicsResourceManager.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  LevelLoader.cpp  LevelLoader.hpp  LoadEvents.hpp  Main.cpp  PhysicsSystem3D.hpp  PlayerControllerSystem.cpp  PlayerControllerSystem.hpp  WinSandbox.cpp  WinSandbox.hpp
Source/WinSandbox/Physics/: CMakeLists.txt  ForceGenerator.cpp  ForceGenerator.hpp  Particle.cpp  Particle.hpp  ParticleForceManager.cpp  ParticleForceManager.hpp  PhysicsEvents.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  Rigidbody.cpp  Rigidbody.hpp
Source/WinSandbox/Physics/Collision/: Collider.hpp  CollisionDetector.cpp  CollisionDetector.hpp  Contact.cpp  Contact.hpp
Source/WindowCreationTesting/: CMakeLists.txt  WindowCreationTesting.cpp  WindowCreationTesting.hpp
Testing/Freight/: CMakeLists.txt  TestVec2.cpp  Vector.cpp
Testing/Freight/Math/: MatrixConstructor.cpp  MatrixMultiplication.cpp  MatrixTranspose.cpp  TestMat2x2.cpp  TestQuaternion.cpp  TestVec2.cpp  TestVec3.cpp  TestVec4.cpp
